--- a/hello-world-api/hello-world-api.csproj
+++ b/hello-world-api/hello-world-api.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <CheckEolTargetFramework>False</CheckEolTargetFramework>
+    <CheckEolTargetFramework>
+      false
+    </CheckEolTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
